--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.26.1",
+    "react-loader-spinner": "^5.1.2",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
@@ -15,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pre-dev": "yarn add axios && yarn add react-router-dom@6 && yarn add react-hook-form && yarn add react-loader-spinner"
   },
   "eslintConfig": {
     "extends": [
